@@ -3,3 +3,4 @@ dmenu/dmenu
 dmenu/stest
 dwm/dwm
 st/st
+statusbar/statusbar
