@@ -1,43 +1,0 @@
-#!/bin/bash
-
-sound_card="PCM"
-
-get_date() {
-    date '+%d.%m.%Y %H:%M:%S'
-}
-
-get_volume() {
-    if amixer get $sound_card | grep -q '\[off\]'; then
-        echo "mute"
-    else
-        amixer get $sound_card | awk -F'[][]' '/%/ {print $2; exit}'
-    fi
-}
-
-get_ip() {
-    local wifi eth ip
-    wifi=$(ip -4 addr show wlan0 | awk '/inet / {print $2}' | cut -d'/' -f1)
-    eth=$(ip -4 addr show eth0 | awk '/inet / {print $2}' | cut -d'/' -f1)
-    
-    [[ -z "$wifi" ]] && wifi="w: down" || wifi="w: $wifi"
-    [[ -z "$eth" ]] && eth="e: down" || eth="e: $eth"
-    
-    echo "$wifi | $eth"
-}
-
-prev_status=""
-while true; do
-    date="$(get_date)"
-    volume="$(get_volume)"
-    memory="$(get_memory)"
-    network="$(get_ip)"
-    
-    status="vol: $volume | mem: $memory | $network | $date"
-    
-    if [[ "$status" != "$prev_status" ]]; then
-        xsetroot -name "$status"
-        prev_status="$status"
-    fi
-    
-    sleep 1
-done
